03.  dnsbl.c: skip dnsblcheck for loopback addresses
04.  added dnsblcheck program
05.  smtpd.c: clear errno when client drops connection
06.  svctool: replaced dnsbl.njabl.org with zen.spamhaus.org
- 06/06/2022
07.  swaks: updated to version 20201014.0
- 20/06/2022
08. installer.c, svctool: fixes for OSX
- 01/07/2022
09. instcheck.in: common instcheck for daemontools, ucspi-tcp, indimail-mta

* Wednesday 18 May 2022 01:41:34 PM IST Manvendra Bhangui <indimail-mta@indimail.org> 1.0-1.1%{?dist}
Release 3.0.0 Start 21/09/2021 End 18/05/2022
======= Release Highlights ================================================
o dynamic queue using POSIX message queue, shared memory
o New daemon qscheduler which replaced qmail-daemon
o Ability to group deliveries in chunks to improve delivery speed
o added qmonitor manage queues.
o added qtop program to monitor queue loads without using disk IO
o Made SPLIT, big todo configurable using env variables.
o added ability to disable a queue temporarily.
o openssl 3.0.0 port
===========================================================================
- 21/09/2021
01.  batv.c: refactored code. Return error type during validation
02.  added man pages for batv
03.  Fixed typos
- 04/10/2021
04.  svctool.in: removed not-needed QUERY_CACHE env variable from defaultqueue
- 20/10/2021
05.  qmail-send.c, qmail-todo.c, qmta-send: display program 'qmail-send' in
     logs for identification
06.  qmail-start.c, qmta-send.c, slowq-start.c: added queue directory as
     argument for identification in ps list
07.  smtpd.c: allow SMTP code to be configured when setting SHUTDOWN env
     variable
08.  qmail-cat.c: added SIGTERM handler to flush io
- 21/10/2021
09.  qmail-qread.c process_queue.c qmail-rm.c qmulti.c: eliminated extra
     variables
10.  qmail-daemon.c: made qstart, qcount variables global
11.  qmail-daemon.c: replaced execv with execvp
- 22/10/2021
12.  qmta-send.c: removed loglock code (not required for signle queue)